--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jasmine": "^4.3.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
