--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/AhmedGomaa013/Storefront-Backend-FWD-Nanodegree#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
