--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "eslint . --ext .ts",
     "prettier": "prettier --config .prettierrc --write ./**/*.ts",
     "pretest": "npm run lint:fix && npm run build",
-    "test": "set ENV=test db-migrate --env test up && jasmine && db-migrate db:drop test",
+    "test": "set ENV=test&& db-migrate --env test up && jasmine && db-migrate --env test reset",
     "build": "npx tsc",
     "prestart": "npm run build",
     "start": "node dist/app.js"
