--- a/package.json
+++ b/package.json
@@ -1,59 +1,9 @@
 {
-  "name": "storefront-backend-fwd-nanodegree",
-  "version": "1.0.0",
-  "description": "storefront backend project for advanced fwd nanodegree",
-  "main": "app.ts",
-  "scripts": {
-    "lint:fix": "eslint src/**/*.{ts,json} --fix",
-    "lint": "eslint . --ext .ts",
-    "prettier": "prettier --config .prettierrc --write ./**/*.ts",
-    "pretest": "npm run lint:fix && npm run build",
-    "test": "set ENV=test&& db-migrate --env test up && jasmine && db-migrate --env test reset",
-    "build": "npx tsc",
-    "prestart": "npm run build",
-    "start": "node dist/app.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AhmedGomaa013/Storefront-Backend-FWD-Nanodegree.git"
-  },
-  "author": "ahmed gomaa",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AhmedGomaa013/Storefront-Backend-FWD-Nanodegree/issues"
-  },
-  "homepage": "https://github.com/AhmedGomaa013/Storefront-Backend-FWD-Nanodegree#readme",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.14",
-    "@types/jasmine": "^4.3.0",
-    "@types/jsonwebtoken": "^8.5.9",
-    "@types/node": "^18.11.9",
-    "@types/pg": "^8.6.5",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.27.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.5.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "jasmine": "^4.5.0",
-    "jasmine-spec-reporter": "^7.0.0",
-    "nodemon": "^2.0.20",
-    "prettier": "^2.7.1",
-    "supertest": "^6.3.1",
-    "typescript": "^4.8.4"
-  },
-  "dependencies": {
-    "bcrypt": "^5.1.0",
-    "db-migrate": "^0.11.13",
-    "db-migrate-pg": "^1.2.2",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0"
-  }
+    "scripts": {
+        "install:server": "cd server && npm install",
+        "build:server": "cd server && npm run build",
+        "build:website": "cd website && npm run build",
+        "deploy:server": "cd server && npm run deploy",
+        "deploy:website": "cd website && npm run deploy"
+    }
 }
