--- a/server/.elasticbeanstalk/config.yml
+++ b/server/.elasticbeanstalk/config.yml
@@ -2,6 +2,10 @@ branch-defaults:
   default:
     environment: Storefrontbackend-env
     group_suffix: null
+environment-defaults:
+  Storefrontbackend-env:
+    branch: null
+    repository: null
 global:
   application_name: store_front_backend
   branch: null
@@ -12,7 +16,7 @@ global:
   instance_profile: null
   platform_name: null
   platform_version: null
-  profile: default
+  profile: null
   repository: null
   sc: null
   workspace_type: Application
