--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,39 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
+orbs:
+  node: circleci/node@5.0.0
+  aws-cli: circleci/aws-cli@2.1.0
+  eb: circleci/aws-elastic-beanstalk@2.0.1
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
+  build:
     docker:
       - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
+      - node/install:
+          node-version: 16.18.0
+      - aws-cli/setup
+      - eb/setup
       - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Install server dependencies
+          command: npm run install:server
+      - run:
+          name: Build server
+          command: npm run build:server
+      - run:
+          name: Build website
+          command: npm run build:website
+      - run:
+          name: Deploy server to eb
+          command: npm run deploy:server
+      - run:
+          name: Deploy website to s3
+          command: npm run deploy:website
 
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  say-hello-workflow:
+  build-deploy:
     jobs:
-      - say-hello
+      - build:
+          filters:
+            branches:
+              only:
+                - main
