--- a/server/package.json
+++ b/server/package.json
@@ -38,8 +38,6 @@
     "@types/pg": "^8.6.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
-    "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3",
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -60,6 +58,8 @@
     "db-migrate-pg": "^1.2.2",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3"
   }
 }
