--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "storefront-backend-fwd-nanodegree",
   "version": "1.0.0",
   "description": "storefront backend project for advanced fwd nanodegree",
-  "engines" : { 
-    "npm" : ">=8.0.0 <9.0.0",
-    "node" : ">=16.0.0 <17.0.0"
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.0.0 <17.0.0"
   },
   "scripts": {
     "lint:fix": "eslint src/**/*.{ts,json} --fix",
@@ -14,7 +14,6 @@
     "test": "set ENV=test&& db-migrate --env test up && jasmine && db-migrate --env test reset",
     "build": "npx tsc",
     "postbuild": "cp package.json dist/package.json && cd dist && zip -r ../archive.zip ./* && cd ..",
-    
     "start": "node app.js",
     "migrate:up": "db-migrate up",
     "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
@@ -31,6 +30,7 @@
   "homepage": "https://github.com/AhmedGomaa013/Storefront-Backend-FWD-Nanodegree#readme",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.14",
     "@types/jasmine": "^4.3.0",
     "@types/jsonwebtoken": "^8.5.9",
@@ -54,12 +54,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "db-migrate": "^0.11.13",
     "db-migrate-pg": "^1.2.2",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.8.0",
-    "body-parser": "^1.20.1",
-    "dotenv": "^16.0.3"
+    "pg": "^8.8.0"
   }
 }
