--- a/website/package.json
+++ b/website/package.json
@@ -2,7 +2,8 @@
     "scripts": {
         "start": "http-server -p 8080 www/",
         "build": "cp index.html www/index.html",
-        "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh"
+        "deploy": "chmod +x ./bin/deploy.sh && ./bin/deploy.sh",
+        "test": ""
     },
     "dependencies": {
         "http-server": "^14.1.1"
