--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "scripts": {
         "install:server": "cd server && npm install",
         "build:server": "cd server && npm run build",
+        "test:server": "cd server && npm run test",
         "build:website": "cd website && npm run build",
         "test:website": "cd website && npm run test",
         "deploy:server": "cd server && npm run deploy",
